<resources>
    <string name="app_name">Infection Prevention Source</string>
    <string name="action_settings">Settings</string>
    <string name="video_navigation_text">Videos</string>
    <string name="training_navigation_text">Training</string>
    <string name="outbreak_navigation_text">Outbreak</string>
    <string name="resources_navigation_text">Resources</string>

    <string name="title_activity_training_navigation">Training</string>
    <string name="title_activity_video_navigation">Videos</string>
    <string name="title_activity_video">Videos</string>

    <string name="title_activity_training">Training</string>
    <string name="title_activity_resources">Resources</string>
    <string name="title_activity_chat">Forum</string>

    <string name="home_navigation_text">Home</string>
    <string name="chat_navigation_text">Forum</string>
    <string name="title_activity_main_video_navigation">Videos</string>
    <string name="title_activity_splash_screen">Infection Prevention Source</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_study_training">StudyTrainingActivity</string>

</resources>
